# blacksnow

./: .autotools  .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile  Makefile.am  NEWS  README  config.status  configure.ac
assets/: Makefile.am
m4/: .gitignore  ChangeLog  sdl2.m4
po/: .gitignore  ChangeLog  Makevars  POTFILES.in  blacksnow.pot  de.po
src/: BlackSnow.c  Makefile  Makefile.am  asset.c  asset.h  game.c  game.h  gameenv.c  gameenv.h
src/.deps/: BlackSnow.Po
src/gameobject/: basictypes.h  gameobject.c  gameobject.h
